Working on css styles

--- a/UFO-level-1/static/css/styles.css
+++ b/UFO-level-1/static/css/styles.css
@@ -1,16 +1,37 @@
-.wrapper {
-
-}
-
 .navbar {
-    color:aquamarine;
+    padding: 10px;
+    margin: 0;
+    background-color: #494c57;
 }
 
+a {
+    color:#f2c757;
+}
 .ufo-pic {
-
+    position: absolute;
+    bottom: 5px;
+    left: 160px;
+    width: 35px;
+    background-color: lightgray;
 }
 
-/*url:https://unsplash.com/photos/73osnYZ133o*/
+.filters {
+    margin-top: 10px;
+}
+
+.filters .panel-body {
+    padding: 0;
+}
+
+#filter-button {
+    background-color: lightblue;
+    position: relative;
+}
+.panel-heading {
+    text-align: center;
+}
+
+/* url:https://unsplash.com/photos/73osnYZ133o */
 .hero {
     position:relative;
     height: 600px;
@@ -33,30 +54,143 @@
     font-size: 30px;
     color: lightskyblue;
 }
+
+* {
+    box-sizing: border-box;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+html,
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+/* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
+.wrapper {
+    position: relative;
+    min-height: 100%;
+    padding-bottom: 130px;
+    overflow: auto;
+}
+
+  /* The footer is positioned at the bottom of the page */
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    min-height: 100px;
+    background: #f2c757;
+}
+
+  /* The code styles the text at the bottom of the footer */
+.footer > .bottom {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 5px;
+    background: #494c57;
+    color: white;
+}
+
+/* Attribution for flaticon */
+.attribution {
+    position: absolute;
+    font-size: 12px;
+    bottom: 5px;
+    left: 200px;
+    color: #f2c757;
+}
+
+.navbar {
+    padding: 5px;
+    margin: 0;
+}
+
+  /* Adding styles to the aside and filter form */
+.ufo-form {
+    margin-top: 50px;
+}
+
+.filters .panel-body {
+    padding: 0;
+}
+
 .filters {
-
+    margin-top: 10px;
 }
 
-.panel {
-
+select {
+    display: block;
+    width: 100%;
+    padding: 8px;
+    color: #8e979f;
+    outline: none;
 }
 
-.form-group {
-
+#table-area th {
+    text-align: center;
 }
 
-.list-group {
-
+.loader {
+    margin-top: 50px;
 }
 
-#filter-button {
-
+.margin-top-50 {
+    margin-top: 50px;
 }
 
-#ufo-table {
 
+  /* media queries which will only be activated at specific screen sizes */
+@media (max-width: 800px) {
+    #table-area td {
+    font-size: 1em;
+    }
 }
 
-.table-head {
+@media (max-width: 500px) {
+    #table-area thead {
+    display: none;
+    }
 
+    #table-area tr td:first-child {
+    font-size: 1.8em;
+    font-weight: bold;
+    background: #1b3146; 
+}
+
+    #table-area tr td:last-child {
+    margin-bottom: 20px;
+    }
+
+    #table-area tr td:last-child::after {
+        display: block;
+        width: 100%;
+        height: 1px;
+        margin-top: 20px;
+        content: " ";
+        background: aliceblue;
+    }
+
+    #table-area td {
+        font-size: 1.25em;
+    }
+
+    #table-area tbody td {
+        display: block;
+        text-align: center;
+    }
+
+    #table-area tbody td::before {
+        display: block;
+        font-size: 1.4em;
+        font-weight: bold;
+        text-align: center;
+        content: attr(data-th);
+    }
+
+    
 }
