--- a/UFO-level-1/static/css/styles.css
+++ b/UFO-level-1/static/css/styles.css
@@ -1,27 +1,28 @@
+/* Navbar */
 .navbar {
     padding: 10px;
     margin: 0;
     background-color: lightblue;
 }
 
-/* Navbar header box */
+/* Navbar header box 
 .navbar-header {
     background-color: white;
     width: 180px;
-}
+}*/
 
 /* Navbar Title */
 a {
-    color:#f5b513;
-    font-size: 30px;
+    color:#194a8b;
+    font-size: 50px;
     margin-left: 10px;
 }
 
 /* UFO icon from flaticon */
 .ufo-pic {
     position: absolute;
-    bottom: 5px;
-    left: 160px;
+    bottom: 10px;
+    left: 165px;
     width: 35px;
     
 }
@@ -31,6 +32,7 @@ a {
     margin-top: 10px;
 }
 
+/* Filters: Panel Body */
 .filters .panel-body {
     padding: 0;
 }
@@ -41,11 +43,15 @@ a {
     text-align: center;
 }
 
+/* Filter button for search */
 #filter-button {
     background-color: lightblue;
     position: relative;
+    margin-right: 20px;
+    margin-left: 30px;
 }
 
+/* Panel Heading */
 .panel-heading {
     text-align: center;
     font-size: 20px;
@@ -65,22 +71,26 @@ a {
     background-size: cover;
 }
 
+/* Main text: heading */
 .hero h1 {
     font-size: 80px;
     margin-top: 150px;
     color: white;
 }
 
+/* Main text: paragraph */
 .hero p {
-    font-size: 50px;
+    font-size: 40px;
     color: lightskyblue;
 }
 
+/* Whole document */
 * {
     box-sizing: border-box;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+/* HTML and body tags */
 html,
 body {
     height: 100%;
@@ -88,7 +98,7 @@ body {
     margin: 0;
 }
 
-/* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
+/* Wrapper: whole page except footer */
 .wrapper {
     position: relative;
     min-height: 100%;
@@ -96,7 +106,7 @@ body {
     overflow: auto;
 }
 
-  /* The footer is positioned at the bottom of the page */
+/* Footer */
 .footer {
     position: absolute;
     right: 0;
@@ -106,7 +116,7 @@ body {
     background: #f2c757;
 }
 
-  /* The code styles the text at the bottom of the footer */
+/* Bottom of the footer */
 .footer > .bottom {
     position: absolute;
     right: 0;
@@ -132,24 +142,12 @@ body {
     color: #f2c757;
 }
 
-.navbar {
-    padding: 5px;
-    margin: 0;
-}
-
-  /* Adding styles to the aside and filter form */
+/* UFO form */
 .ufo-form {
     margin-top: 50px;
 }
 
-.filters .panel-body {
-    padding: 0;
-}
-
-.filters {
-    margin-top: 10px;
-}
-
+/* Select */
 select {
     display: block;
     width: 100%;
@@ -158,14 +156,17 @@ select {
     outline: none;
 }
 
+/* Table Headers */
 #table-area th {
     text-align: center;
 }
 
+/* Loader */
 .loader {
     margin-top: 50px;
 }
 
+/* Set: Margin Top 50 */
 .margin-top-50 {
     margin-top: 50px;
 }
@@ -175,30 +176,22 @@ select {
     #table-area td {
     font-size: 1em;
     }
+/* Main text: heading */
+.hero h1 {
+    font-size: 65px;
+    margin-top: 150px;
+}
+
+/* Main text: paragraph */
+.hero p {
+    font-size: 30px;
+}
+
 }
 
 @media (max-width: 500px) {
     #table-area thead {
     display: none;
-    }
-
-    #table-area tr td:first-child {
-    font-size: 1.8em;
-    font-weight: bold;
-    background: #1b3146; 
-}
-
-    #table-area tr td:last-child {
-    margin-bottom: 20px;
-    }
-
-    #table-area tr td:last-child::after {
-        display: block;
-        width: 100%;
-        height: 1px;
-        margin-top: 20px;
-        content: " ";
-        background: aliceblue;
     }
 
     #table-area td {
@@ -210,13 +203,15 @@ select {
         text-align: center;
     }
 
-    #table-area tbody td::before {
-        display: block;
-        font-size: 1.4em;
-        font-weight: bold;
-        text-align: center;
-        content: attr(data-th);
-    }
+/* Main text: heading */
+.hero h1 {
+    font-size: 50px;
+    margin-top: 130px;
+}
 
-    
+/* Main text: paragraph */
+.hero p {
+    font-size: 20px;
+}
+
 }
