--- a/UFO-level-2/static/css/styles.css
+++ b/UFO-level-2/static/css/styles.css
@@ -12,8 +12,9 @@ a {
     margin-left: 10px;
 }
 
+/* Dropdown menu text */
 .dropdown-menu a {
-    font-size: 12px;
+    font-size: 16px;
 }
 
 /* Make dropdown smaller */
