--- a/UFO-level-2/static/css/styles.css
+++ b/UFO-level-2/static/css/styles.css
@@ -64,6 +64,14 @@ a {
     margin-left: 30px;
 }
 
+/* Filter button for search */
+#reset-button {
+    background-color: lightyellow;
+    position: relative;
+    margin-right: 20px;
+    margin-left: 30px;
+}
+
 /* Panel Heading */
 .panel-heading {
     text-align: center;
