--- a/UFO-level-2/static/css/styles.css
+++ b/UFO-level-2/static/css/styles.css
@@ -30,10 +30,10 @@ a {
 
 /* Dropdown buttons */
 .dropdown button {
-    margin-top: 10px;
-    margin-left: 30px;
+    margin-top: 5px;
+    margin-left: 10px;
     margin-right: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     background-color: lightblue;
     border-color: black;
     color: black;
@@ -82,7 +82,8 @@ a {
 #filter-button {
     background-color: lightblue;
     position: relative;
-    margin-top: 10px;
+    /* margin-top: 10px;
+    margin-left: 45px; */
     border-color: black;
     
 }
@@ -91,9 +92,9 @@ a {
 #reset-button {
     background-color: #f2c757;
     position: relative;
-    margin-bottom: 10px;
-    margin-right: 20px;
-    margin-left: 30px;
+    /* margin-bottom: 10px;
+    margin-left: 80px;
+    margin-right: 20px; */
     border-color: black;
 }
 
