--- a/UFO-level-2/static/css/styles.css
+++ b/UFO-level-2/static/css/styles.css
@@ -1,16 +1,74 @@
+/* Navbar Addition */
+#logo {
+    width: 100px;
+    height: auto;
+    display: block;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-right: 1px;
+    margin-left: 1px;
+    padding: 0px;
+    border: #90A187ff solid;
+    border-width: 8px;
+}
+
 /* Navbar */
 .navbar {
+    padding: 0px;
+    background: whitesmoke;
+    width: 100%;
+
+}
+
+/* Navbar: specifically the website title */
+.navbar-light .navbar-brand {
+    /* font-size: 25px; */
+    /* font-weight: bold; */
+    color: whitesmoke;
+    /* background: #90A187ff; */
+    padding: 20px;
+    margin-left: 20px;
+    color: whitesmoke;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+
+}
+
+/* Navbar: list objects */
+.navbar li {
+    display: inline-block;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+/* Navbar: list objects (link text) */
+.navbar li a {
+    text-decoration: none;
+    color: #34553Aff;
+    font-size: 18px;
+    text-align: right;
+
+}
+
+@media (max-width: 768px) {
+    #logo {
+        width: 80px;
+    }
+}
+
+/* Navbar */
+/* .navbar {
     padding: 10px;
     margin: 0;
     background-color: lightblue;
-}
+} */
 
 /* Navbar Title */
-a {
+/* a {
     color:#194a8b;
     font-size: 50px;
     margin-left: 10px;
-}
+} */
 
 /* Filter Options: paragraph */
 .chosen-options p {
@@ -43,8 +101,10 @@ a {
 /* UFO icon from flaticon */
 .ufo-pic {
     position: absolute;
-    bottom: 10px;
-    left: 165px;
+    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
     width: 35px;
     
 }
@@ -119,7 +179,7 @@ label {
 /* Main text: heading */
 .hero h1 {
     font-size: 80px;
-    margin-top: 150px;
+    margin-top: 100px;
     color: white;
 }
 
@@ -132,7 +192,7 @@ label {
 /* Whole document */
 * {
     box-sizing: border-box;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Cambria', Georgia, serif;
 }
 
 /* HTML and body tags */
